deploy/overlays/prod/ingress/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-ingress
  namespace: listik-prod
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ec2-13-125-202-254.ap-northeast-2.compute.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
